# demo_software_testing

./: cart_api.py  customer_api.py  product_api.py  pyproject.toml  requirements.txt  store_api.py  util.py
demo_software_testing/: __init__.py
tests/: conftest.py  test_cart.py  test_customer.py  test_orders.py  test_product.py  test_sanity.py  test_stores.py
